--- a/main.html
+++ b/main.html
@@ -1,16 +1,90 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Movie Image Gallery</title>
+  <style>
+    .container-fluid {
+      margin: 0 auto;
+      max-width: 1200px;
+      padding: 20px;
+    }
+
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      margin: -10px;
+    }
+
+    .col {
+      flex-basis: 0;
+      flex-grow: 1;
+      max-width: 100%;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+
+    .col img {
+      width: 100%;
+      height: auto;
+    }
+
+    @media (max-width: 767px) {
+      .row {
+        flex-direction: column;
+      }
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+  <div class="container-fluid">
+    <div class="row">
+      <!-- First Row -->
+      <div class="col">
+        <img src="image1.jpg" alt="Image 1">
+      </div>
+      <div class="col">
+        <img src="image2.jpg" alt="Image 2">
+      </div>
+      <div class="col">
+        <img src="image3.jpg" alt="Image 3">
+      </div>
+      <!-- Second Row -->
+      <div class="col">
+        <img src="image4.jpg" alt="Image 4">
+      </div>
+      <div class="col">
+        <img src="image5.jpg" alt="Image 5">
+      </div>
+      <div class="col">
+        <img src="image6.jpg" alt="Image 6">
+      </div>
+      <!-- Third Row -->
+      <div class="col">
+        <img src="image7.jpg" alt="Image 7">
+      </div>
+      <div class="col">
+        <img src="image8.jpg" alt="Image 8">
+      </div>
+      <div class="col">
+        <img src="image9.jpg" alt="Image 9">
+      </div>
+      <!-- Fourth Row -->
+      <div class="col">
+        <img src="image10.jpg" alt="Image 10">
+      </div>
+      <div class="col">
+        <img src="image11.jpg" alt="Image 11">
+      </div>
+      <div class="col">
+        <img src="image12.jpg" alt="Image 12">
+      </div>
+      <!-- Fifth Row -->
+      <div class="col">
+        <img src="image13.jpg" alt="Image 13">
+      </div>
+    </div>
+  </div>
+<script type="text/javascript" src="./script.js">
 </script>
-
 </body>
-
 </html>
