--- a/main.html
+++ b/main.html
@@ -37,53 +37,64 @@
 </head>
 <body>
   <div class="container-fluid">
-    <div class="row">
-      <!-- First Row -->
-      <div class="col">
-        <img src="image1.jpg" alt="Image 1">
-      </div>
-      <div class="col">
-        <img src="image2.jpg" alt="Image 2">
-      </div>
-      <div class="col">
-        <img src="image3.jpg" alt="Image 3">
-      </div>
-      <!-- Second Row -->
-      <div class="col">
-        <img src="image4.jpg" alt="Image 4">
-      </div>
-      <div class="col">
-        <img src="image5.jpg" alt="Image 5">
-      </div>
-      <div class="col">
-        <img src="image6.jpg" alt="Image 6">
-      </div>
-      <!-- Third Row -->
-      <div class="col">
-        <img src="image7.jpg" alt="Image 7">
-      </div>
-      <div class="col">
-        <img src="image8.jpg" alt="Image 8">
-      </div>
-      <div class="col">
-        <img src="image9.jpg" alt="Image 9">
-      </div>
-      <!-- Fourth Row -->
-      <div class="col">
-        <img src="image10.jpg" alt="Image 10">
-      </div>
-      <div class="col">
-        <img src="image11.jpg" alt="Image 11">
-      </div>
-      <div class="col">
-        <img src="image12.jpg" alt="Image 12">
-      </div>
-      <!-- Fifth Row -->
-      <div class="col">
-        <img src="image13.jpg" alt="Image 13">
-      </div>
+  <div class="row">
+    <div class="col-sm-2">
+      <img src="image1.jpg" alt="Image 1">
+    </div>
+    <div class="col-sm-2">
+      <img src="image2.jpg" alt="Image 2">
+    </div>
+    <div class="col-sm-2">
+      <img src="image3.jpg" alt="Image 3">
+    </div>
+    <div class="col-sm-2">
+      <img src="image4.jpg" alt="Image 4">
+    </div>
+    <div class="col-sm-2">
+      <img src="image5.jpg" alt="Image 5">
+    </div>
+    <div class="col-sm-2">
+      <img src="image6.jpg" alt="Image 6">
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-2">
+      <img src="image7.jpg" alt="Image 7">
+    </div>
+    <div class="col-sm-2">
+      <img src="image8.jpg" alt="Image 8">
+    </div>
+    <div class="col-sm-2">
+      <img src="image9.jpg" alt="Image 9">
+    </div>
+    <div class="col-sm-2">
+      <img src="image10.jpg" alt="Image 10">
+    </div>
+    <div class="col-sm-2">
+      <img src="image11.jpg" alt="Image 11">
+    </div>
+    <div class="col-sm-2">
+      <img src="image12.jpg" alt="Image 12">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="image13.jpg" alt="Image 13">
+    </div>
+    <div class="col-sm-4">
+      <img src="image14.jpg" alt="Image 14">
+    </div>
+    <div class="col-sm-4">
+      <img src="image15.jpg" alt="Image 15">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <img src="image16.jpg" alt="Image 16">
+    </div>
+  </div>
+</div>
+
 <script type="text/javascript" src="./script.js">
 </script>
 </body>
